Add PokeAPI URL as app setting

--- a/PokePlannerApi/appsettings.Development.json
+++ b/PokePlannerApi/appsettings.Development.json
@@ -26,6 +26,9 @@
     "VersionCollectionName": "Versions",
     "VersionGroupCollectionName": "VersionGroups"
   },
+  "PokeApiSettings": {
+    "BaseUri": "http://localhost:8000/api/v2/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
