--- a/PokePlannerApi/appsettings.json
+++ b/PokePlannerApi/appsettings.json
@@ -26,6 +26,9 @@
     "VersionCollectionName": "Versions",
     "VersionGroupCollectionName": "VersionGroups"
   },
+  "PokeApiSettings": {
+    "BaseUri": "https://pokeapi.co/api/v2/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
