--- a/PokePlannerApi/appsettings.Development.json
+++ b/PokePlannerApi/appsettings.Development.json
@@ -1,30 +1,35 @@
 {
   "DataStoreSettings": {
-    "AbilityCollectionName": "Abilities",
-    "EncounterConditionCollectionName": "EncounterConditions",
-    "EncounterConditionValueCollectionName": "EncounterConditionValues",
-    "EncounterCollectionName": "Encounters",
-    "EncounterMethodCollectionName": "EncounterMethods",
-    "EvolutionChainCollectionName": "EvolutionChains",
-    "EvolutionTriggerCollectionName": "EvolutionTriggers",
-    "GenerationCollectionName": "Generations",
-    "ItemCollectionName": "Items",
-    "LocationCollectionName": "Locations",
-    "LocationAreaCollectionName": "LocationAreas",
-    "MachineCollectionName": "Machines",
-    "MoveCategoryCollectionName": "MoveCategories",
-    "MoveCollectionName": "Moves",
-    "MoveDamageClassCollectionName": "MoveDamageClasses",
-    "MoveLearnMethodCollectionName": "MoveLearnMethods",
-    "MoveTargetCollectionName": "MoveTargets",
-    "PokedexCollectionName": "Pokedexes",
-    "PokemonCollectionName": "Pokemon",
-    "PokemonFormCollectionName": "PokemonForms",
-    "PokemonSpeciesCollectionName": "PokemonSpecies",
-    "StatCollectionName": "Stats",
-    "TypeCollectionName": "Types",
-    "VersionCollectionName": "Versions",
-    "VersionGroupCollectionName": "VersionGroups"
+    "ConnectionString": "mongodb://localhost:27017",
+    "PrivateKey": "PrivateKeyHere",
+    "DatabaseName": "PokePlannerApiDataStore",
+    "CollectionSettings": {
+      "AbilityCollectionName": "Abilities",
+      "EncounterConditionCollectionName": "EncounterConditions",
+      "EncounterConditionValueCollectionName": "EncounterConditionValues",
+      "EncounterCollectionName": "Encounters",
+      "EncounterMethodCollectionName": "EncounterMethods",
+      "EvolutionChainCollectionName": "EvolutionChains",
+      "EvolutionTriggerCollectionName": "EvolutionTriggers",
+      "GenerationCollectionName": "Generations",
+      "ItemCollectionName": "Items",
+      "LocationCollectionName": "Locations",
+      "LocationAreaCollectionName": "LocationAreas",
+      "MachineCollectionName": "Machines",
+      "MoveCategoryCollectionName": "MoveCategories",
+      "MoveCollectionName": "Moves",
+      "MoveDamageClassCollectionName": "MoveDamageClasses",
+      "MoveLearnMethodCollectionName": "MoveLearnMethods",
+      "MoveTargetCollectionName": "MoveTargets",
+      "PokedexCollectionName": "Pokedexes",
+      "PokemonCollectionName": "Pokemon",
+      "PokemonFormCollectionName": "PokemonForms",
+      "PokemonSpeciesCollectionName": "PokemonSpecies",
+      "StatCollectionName": "Stats",
+      "TypeCollectionName": "Types",
+      "VersionCollectionName": "Versions",
+      "VersionGroupCollectionName": "VersionGroups"
+    }
   },
   "PokeApiSettings": {
     "BaseUri": "http://localhost:8000/api/v2/"
