--- a/PokePlannerApi.Data/PokePlannerApi.Data.csproj
+++ b/PokePlannerApi.Data/PokePlannerApi.Data.csproj
@@ -19,8 +19,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PokePlannerApi.Models\PokePlannerApi.Models.csproj">
-    </ProjectReference>
+    <ProjectReference Include="..\PokePlannerApi.Models\PokePlannerApi.Models.csproj" />
+    <ProjectReference Include="..\PokePlannerApi.Clients\PokePlannerApi.Clients.csproj" />
   </ItemGroup>
 
 </Project>
