--- a/PokePlannerApi.Clients/PokePlannerApi.Clients.csproj
+++ b/PokePlannerApi.Clients/PokePlannerApi.Clients.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+    <PackageReference Include="System.IO.Abstractions" Version="13.2.10" />
   </ItemGroup>
 
   <ItemGroup>
