--- a/PokePlannerApi.Clients/PokePlannerApi.Clients.csproj
+++ b/PokePlannerApi.Clients/PokePlannerApi.Clients.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
