Create strongly-typed service for accessing efficacy data

--- a/PokePlannerApi/appsettings.Development.json
+++ b/PokePlannerApi/appsettings.Development.json
@@ -5,6 +5,7 @@
     "DatabaseName": "PokePlannerApiDataStore",
     "CollectionSettings": {
       "AbilityCollectionName": "Abilities",
+      "EfficacyCollectionName": "Efficacies",
       "EncounterConditionCollectionName": "EncounterConditions",
       "EncounterConditionValueCollectionName": "EncounterConditionValues",
       "EncounterCollectionName": "Encounters",
