--- a/PokePlannerApi/appsettings.json
+++ b/PokePlannerApi/appsettings.json
@@ -2,6 +2,7 @@
   "DataStoreSettings": {
     "CollectionSettings": {
       "AbilityCollectionName": "Abilities",
+      "EfficacyCollectionName": "Efficacies",
       "EncounterConditionCollectionName": "EncounterConditions",
       "EncounterConditionValueCollectionName": "EncounterConditionValues",
       "EncounterCollectionName": "Encounters",
