--- a/PokePlannerApi/appsettings.Development.json
+++ b/PokePlannerApi/appsettings.Development.json
@@ -33,7 +33,8 @@
     }
   },
   "PokeApiSettings": {
-    "BaseUri": "http://localhost:8000/api/v2/"
+    "BaseUri": "http://localhost:8000/api/v2/",
+    "GraphQlUri": "https://beta.pokeapi.co/graphql/v1beta"
   },
   "Logging": {
     "LogLevel": {
