--- a/PokePlannerApi/appsettings.json
+++ b/PokePlannerApi/appsettings.json
@@ -30,7 +30,8 @@
     }
   },
   "PokeApiSettings": {
-    "BaseUri": "https://pokeapi.co/api/v2/"
+    "BaseUri": "https://pokeapi.co/api/v2/",
+    "GraphQlUri": "https://beta.pokeapi.co/graphql/v1beta"
   },
   "Logging": {
     "LogLevel": {
