Add in-memory cache via Polly policy to GraphQL client

--- a/PokePlannerApi/appsettings.json
+++ b/PokePlannerApi/appsettings.json
@@ -31,7 +31,8 @@
   },
   "PokeApiSettings": {
     "BaseUri": "https://pokeapi.co/api/v2/",
-    "GraphQlUri": "https://beta.pokeapi.co/graphql/v1beta"
+    "GraphQlUri": "https://beta.pokeapi.co/graphql/v1beta",
+    "GraphQlClientCacheEntryLifetimeDays": 365
   },
   "Logging": {
     "LogLevel": {
