--- a/PokePlannerApi.Clients/PokePlannerApi.Clients.csproj
+++ b/PokePlannerApi.Clients/PokePlannerApi.Clients.csproj
@@ -7,8 +7,11 @@
   <ItemGroup>
     <PackageReference Include="GraphQL.Client" Version="3.2.4" />
     <PackageReference Include="GraphQL.Client.Serializer.Newtonsoft" Version="3.2.4" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Polly" Version="7.2.2" />
+    <PackageReference Include="Polly.Caching.Memory" Version="3.0.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,10 +22,6 @@
     <Reference Include="PokeApiNet">
       <HintPath>..\..\PokeApiNet\PokeApiNet\bin\Debug\netstandard2.1\PokeApiNet.dll</HintPath>
     </Reference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="GraphQL\" />
   </ItemGroup>
     
 </Project>
