--- a/PokePlannerApi/appsettings.Development.json
+++ b/PokePlannerApi/appsettings.Development.json
@@ -34,7 +34,8 @@
   },
   "PokeApiSettings": {
     "BaseUri": "http://localhost:8000/api/v2/",
-    "GraphQlUri": "https://beta.pokeapi.co/graphql/v1beta"
+    "GraphQlUri": "https://beta.pokeapi.co/graphql/v1beta",
+    "GraphQlClientCacheEntryLifetimeDays": 365
   },
   "Logging": {
     "LogLevel": {
