Add wait-and-retry logic to resilience policy chain

--- a/PokePlannerApi/appsettings.Development.json
+++ b/PokePlannerApi/appsettings.Development.json
@@ -35,6 +35,7 @@
   "PokeApiSettings": {
     "BaseUri": "http://localhost:8000/api/v2/",
     "GraphQlUri": "https://beta.pokeapi.co/graphql/v1beta",
+    "ResiliencePolicyRetryCount": 3,
     "GraphQlClientCacheEntryLifetimeDays": 365
   },
   "Logging": {
