--- a/PokePlannerApi/appsettings.json
+++ b/PokePlannerApi/appsettings.json
@@ -32,6 +32,7 @@
   "PokeApiSettings": {
     "BaseUri": "https://pokeapi.co/api/v2/",
     "GraphQlUri": "https://beta.pokeapi.co/graphql/v1beta",
+    "ResiliencePolicyRetryCount": 3,
     "GraphQlClientCacheEntryLifetimeDays": 365
   },
   "Logging": {
