--- a/PokePlannerApi/appsettings.Development.json
+++ b/PokePlannerApi/appsettings.Development.json
@@ -33,8 +33,8 @@
     }
   },
   "PokeApiSettings": {
-    "BaseUri": "http://localhost:8000/api/v2/",
-    "GraphQlUri": "https://beta.pokeapi.co/graphql/v1beta",
+    "BaseUri": "http://localhost/api/v2/",
+    "GraphQlUri": "http://localhost:8080/v1/graphql",
     "ResiliencePolicyRetryCount": 3,
     "ResiliencePolicyCacheEntryLifetimeDays": 365
   },
