--- a/PokePlannerApi.Clients/PokePlannerApi.Clients.csproj
+++ b/PokePlannerApi.Clients/PokePlannerApi.Clients.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="PokeApiNet" Version="3.0.3" />
     <PackageReference Include="Polly" Version="7.2.2" />
     <PackageReference Include="Polly.Caching.Memory" Version="3.0.2" />
   </ItemGroup>
@@ -18,10 +19,4 @@
     <ProjectReference Include="..\PokePlannerApi.Models\PokePlannerApi.Models.csproj" />
   </ItemGroup>
 
-  <ItemGroup>
-    <Reference Include="PokeApiNet">
-      <HintPath>..\..\PokeApiNet\PokeApiNet\bin\Debug\netstandard2.1\PokeApiNet.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-    
 </Project>
