--- a/PokePlannerApi.Data/PokePlannerApi.Data.csproj
+++ b/PokePlannerApi.Data/PokePlannerApi.Data.csproj
@@ -5,17 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.16.0" />
-    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="5.0.0" />
     <PackageReference Include="System.Collections.Immutable" Version="5.0.0" />
     <PackageReference Include="System.Text.Encodings.Web" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.16.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="PokeApiNet">
-      <HintPath>..\..\PokeApiNet\PokeApiNet\bin\Debug\netstandard2.1\PokeApiNet.dll</HintPath>
-    </Reference>
+    <PackageReference Include="PokeApiNet" Version="3.0.3" />
   </ItemGroup>
 
   <ItemGroup>
