--- a/PokePlannerApi.Models/PokePlannerApi.Models.csproj
+++ b/PokePlannerApi.Models/PokePlannerApi.Models.csproj
@@ -7,11 +7,7 @@
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.11.6" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="PokeApiNet" Version="3.0.3" />
   </ItemGroup>
 
-  <ItemGroup>
-    <Reference Include="PokeApiNet">
-      <HintPath>..\..\PokeApiNet\PokeApiNet\bin\Debug\netstandard2.1\PokeApiNet.dll</HintPath>
-    </Reference>
-  </ItemGroup>
 </Project>
